# idea-generator-web

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  README.zh-CN.md  README_DEPLOY.md  alembic.ini  app.py  config.py  docker-compose.dev.yml  docker-compose.yml  env.example  pyproject.toml  railway.json  render.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
.streamlit/: config.toml
api/: __init__.py  dependencies.py  main.py  workers.py
api/middleware/: __init__.py  error_handler.py
api/routers/: __init__.py  analytics.py  auth.py  chat.py  favorites.py  generate.py  health.py  history.py  images.py  models.py  notifications.py  preferences.py  projects.py  prompts.py  quota.py  search.py  settings.py  tasks.py  templates.py  video.py  websocket.py
api/routers/admin/: __init__.py  announcements.py  moderation.py  providers.py  quota.py  system.py  tasks.py  users.py
api/schemas/: __init__.py  admin.py  analytics.py  auth.py  chat.py  common.py  favorites.py  generate.py  history.py  notifications.py  preferences.py  projects.py  prompts.py  quota.py  search.py  settings.py  tasks.py  templates.py  video.py  websocket.py
components/: __init__.py  basic_generation.py  batch_generation.py  chat_generation.py  history.py  search_generation.py  sidebar.py  style_transfer.py  templates.py  trial_quota_display.py
config/: banned_keywords.json
core/: __init__.py  auth.py  config.py  exceptions.py  redis.py  security.py
database/: __init__.py
database/migrations/: env.py
database/migrations/versions/: 001_initial_schema.py  002_add_frontend_api_tables.py  003_add_credit_quota_system.py  004_drop_prompt_tables.py  005_add_thinking_to_chat_messages.py  006_replace_templates_with_prompt_library.py  007_rename_user_settings_to_user_preferences.py  008_add_auth_id_to_users.py  009_add_media_type_to_prompt_templates.py  010_add_media_type_to_generated_images.py  011_add_preview_4k_url.py  012_add_preview_storage_key.py
database/models/: __init__.py  api_key.py  audit.py  base.py  chat.py  favorite.py  image.py  notification.py  project.py  prompt.py  quota.py  settings.py  template.py  template_favorite.py  template_like.py  template_usage.py  user.py  user_preferences.py
database/repositories/: __init__.py  api_key_repo.py  audit_repo.py  chat_repo.py  favorite_repo.py  image_repo.py  notification_repo.py  preferences_repo.py  project_repo.py  prompt_repo.py  quota_repo.py  settings_repo.py  template_repo.py  user_repo.py
docs/: FASTAPI_MIGRATION_PLAN.md
experiments/: 01_basic.py  02_thinking.py  03_search.py  04_4k.py  05_multilang.py  06_blend.py
i18n/: __init__.py  en.json  zh.json
scripts/: README_AUDIT.md  analyze_moderation_logs.py  delete_flagged_content.py  generate_ai_templates.py  init_prompts.py  maximize_credits.py  preview_prompts.py  seed_templates.py  test_audit_system.py  test_pipeline_e2e.py  test_prompts.py  upload_keywords.py
services/: __init__.py  ai_content_moderator.py  audit_logger.py  auth.py  auth_service.py  chat_session.py  content_filter.py  cost_estimator.py  generation_state.py  generation_task.py  generator.py  health_check.py  history_sync.py  image_storage.py  image_task.py  llm_client.py  model_router.py  persistence.py  preferences_service.py  preview_generator.py  prompt_generator.py  prompt_pipeline.py  prompt_storage.py  provider_router.py  quota_service.py  r2_storage.py  template_generator.py  trial_quota.py  websocket_manager.py
services/providers/: __init__.py  alibaba.py  base.py  bytedance.py  china_base.py  flux.py  google.py  kling.py  minimax.py  openai.py  registry.py  runway.py  zhipu.py
services/storage/: __init__.py  base.py  local.py  manager.py  minio.py  oss.py
tests/: __init__.py  conftest.py
tests/integration/: test_auth.py  test_chat.py  test_generate.py  test_health.py  test_history.py  test_models.py  test_prompts.py  test_quota.py  test_tasks.py
tests/unit/: test_auth.py  test_blend.py  test_chat.py  test_core.py  test_describe.py  test_error_handler.py  test_generation_task.py  test_google_provider.py  test_inpaint.py  test_model_router.py  test_outpaint.py  test_preferences.py  test_prompt_pipeline.py  test_services.py  test_websocket.py
utils/: __init__.py  async_helper.py  image_viewer.py
